# evalarray

./: .travis.yml  CMakeLists.txt  README.md
.travis/linux/: build.sh
.travis/osx/: build.sh
.travis/win/: build.sh
.travis/windows/: build.sh
cmake/: configuration.cmake
evalarray/: evalarray.h  evalarray_utils.h  slice.h
tests/: AccessAndSlicing.cpp  BasicOperations.cpp  BasicOps.cpp  CMakeLists.txt  Constructors.cpp  ITest.h  TestContainer.cpp  TestContainer.h  main.cpp
